added clipping, merging, looping media source samples

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,40 +2,34 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
     <Button android:layout_width="match_parent"
-            android:text="Extractor Media Source"
+            android:text="@string/text_extractor"
             android:id="@+id/btnExtractor"
             android:layout_height="wrap_content"/>
 
     <Button android:layout_width="match_parent"
-            android:text="Clipping Media Source"
+            android:text="@string/text_clipping"
             android:id="@+id/btnClipping"
             android:layout_height="wrap_content"/>
 
     <Button android:layout_width="match_parent"
-            android:text="Concatenating Media Source"
+            android:text="@string/text_concatenating"
             android:id="@+id/btnConcatenating"
             android:layout_height="wrap_content"/>
 
     <Button android:layout_width="match_parent"
-            android:text="Looping Media Source"
+            android:text="@string/text_looping"
             android:id="@+id/btnLooping"
             android:layout_height="wrap_content"/>
 
     <Button android:layout_width="match_parent"
-            android:text="Merging Media Source"
+            android:text="@string/text_merging"
             android:id="@+id/btnMerging"
-            android:layout_height="wrap_content"/>
-
-    <Button android:layout_width="match_parent"
-            android:text="Composite Media Source"
-            android:id="@+id/btnComposite"
             android:layout_height="wrap_content"/>
 
 </LinearLayout>
